feat: add model validation
